--- a/html/template/admin/assets/scss/component/_headerBar.scss
+++ b/html/template/admin/assets/scss/component/_headerBar.scss
@@ -119,6 +119,24 @@ Styleguide 2.0
       font-size: 21px;
     }
   }
+  &__isMaintenance {
+    display: table-cell;
+    visibility:hidden;
+    padding: 0 20px;
+    height: 65px;
+    font-size: 16px;
+    color: $yellow;
+    font-weight: bold;
+    vertical-align: middle;
+    text-align: right;
+    animation: blink 1s ease-in-out infinite alternate;
+
+    @keyframes blink{
+      0% {opacity:0;}
+      100% {opacity:1;}
+    }
+
+  }
   &__userMenu {
     display: table-cell;
     padding: 0 20px;
