商品詳細ページの画像クリックで次の画像へ遷移

--- a/src/Eccube/Resource/template/default/Product/detail.twig
+++ b/src/Eccube/Resource/template/default/Product/detail.twig
@@ -136,7 +136,12 @@ file that was distributed with this source code.
             $('.slideThumb').on('click', function() {
                 var index = $(this).attr('data-index');
                 $('.item_visual').slick('slickGoTo', index, false);
-            })
+            });
+
+            $('.slick-list').on('click',function(){
+                $('.item_visual').slick('slickNext');
+            });
+
         });
     </script>
     <script>
